Few tweaks, added mysql etc volume option, and logging param to specify level and rotation period

--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,7 @@ GHOST_DATA=REPLACEME
 MYSQL_VERSION=5.7
 MYSQL_CONTAINER_NAME=REPLACEME-MYSQL
 MYSQL_DATA=REPLACEME
+MYSQL_CONFIG=REPLACEME
 PMA_CONTAINER_NAME=REPLACEME-PMA
 
 NGINX_VERSION=latest
