Added ghost custom image to wait for mysql on init, with self certificates

--- a/.env.sample
+++ b/.env.sample
@@ -3,22 +3,31 @@ GHOST_URL=https://replaceme.com
 GHOST_CONTAINER_NAME=REPLACEME-GHOST
 DB_HOST=db
 DB_NAME=REPLACEME
-DB_USER=root
+DB_USER=REPLACEME
 DB_PASSWORD=REPLACEME
+DB_ROOT_PASSWORD=REPLACEME
 SMTP_SERVICE=REPLACEME
 SMTP_USER=REPLACEME
 SMTP_PASSWORD=REPLACEME
 GHOST_DATA=REPLACEME
+GHOST_PORT=REPLACEME
+LOGGING_LEVEL=REPLACEME
+LOGGING_ROTATION_PERIOD=REPLACEME
 
 MYSQL_VERSION=5.7
 MYSQL_CONTAINER_NAME=REPLACEME-MYSQL
 MYSQL_DATA=REPLACEME
+MYSQL_CONFIG=REPLACEME
+MYSQL_PORT=REPLACEME
+
 PMA_CONTAINER_NAME=REPLACEME-PMA
+PMA_PORT=REPLACEME
 
 NGINX_VERSION=latest
 NGINX_CONTAINER_NAME=REPLACEME-NGINX
 SERVER_NAME="replaceme.com www.replaceme.com"
 NGINX_CONFIG_PATH=./nginx/conf.d
+
 CERT_PATH=/replaceme
 CERT_CRT=replaceme.crt
 CERT_KEY=replaceme.key
