Added configs for logging

--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,8 @@ SMTP_USER=REPLACEME
 SMTP_PASSWORD=REPLACEME
 GHOST_DATA=REPLACEME
 GHOST_PORT=REPLACEME
+LOGGING_LEVEL=REPLACEME
+LOGGING_ROTATION_PERIOD=REPLACEME
 
 MYSQL_VERSION=5.7
 MYSQL_CONTAINER_NAME=REPLACEME-MYSQL
