--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,29 +7,28 @@ add_header 'Referrer-Policy' 'no-referrer-when-downgrade';
 server {
   listen 80;
   listen [::]:80;
-  server_name _;
-    
-    location /.well-known/acme-challenge/ {
-        root /usr/share/nginx/html;
-    }
+  server_name SERVER_NAME;
 
-   location / {
-        return 301 https://$host$request_uri;
-    }
+  location /.well-known/acme-challenge/ {
+    root /usr/share/nginx/html;
+  }
 
+  location / {
+    return 301 https://$host$request_uri;
+  }
 }
 
 server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
-  server_name SERVERNAME;
+  server_name SERVER_NAME;
 
   ssl_protocols TLSv1.2;
   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
   ssl_prefer_server_ciphers on;
   ssl_session_cache shared:SSL:10m;
-  ssl_certificate /etc/letsencrypt/live/SERVERNAME/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/SERVERNAME/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/SERVER_NAME/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/SERVER_NAME/privkey.pem;
   include /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -39,9 +38,9 @@ server {
     proxy_set_header X-Forwarded-Proto https;
     proxy_pass http://ghost:2368;
   }
-  if ($request_method !~ ^(GET|HEAD|POST|PUT)$ )
-  {
-       return 405;
-   }
 
+  if ($request_method !~ ^(GET|HEAD|POST|PUT)$ )
+    {
+      return 405;
+    }
 }
