--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,14 +7,14 @@ add_header 'Referrer-Policy' 'no-referrer-when-downgrade';
 server {
   listen 80;
   listen [::]:80;
-  server_name _;
+  server_name SERVER_NAME;
   return 301 https://$host$request_uri;
 }
 
 server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
-  server_name SERVERNAME;
+  server_name SERVER_NAME;
 
   ssl_protocols TLSv1.2;
   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
@@ -29,9 +29,10 @@ server {
     proxy_set_header X-Forwarded-Proto https;
     proxy_pass http://ghost:2368;
   }
+
   if ($request_method !~ ^(GET|HEAD|POST|PUT)$ )
   {
-       return 405;
-   }
+    return 405;
+  }
 
 }
