--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -9,12 +9,13 @@ server {
   listen [::]:80;
   server_name SERVER_NAME;
 
-  location /.well-known/acme-challenge/ {
-    root /usr/share/nginx/html;
-  }
-
   location / {
     return 301 https://$host$request_uri;
+  }
+
+  location /.well-known/acme-challenge/ {
+    root /usr/share/nginx/html;
+    allow all;
   }
 }
 
@@ -29,18 +30,27 @@ server {
   ssl_session_cache shared:SSL:10m;
   ssl_certificate /etc/letsencrypt/live/SERVER_NAME/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/SERVER_NAME/privkey.pem;
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  # include /etc/letsencrypt/options-ssl-nginx.conf;
+  # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
   location / {
-    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header Host $host;
     proxy_pass http://ghost:2368;
   }
 
-  if ($request_method !~ ^(GET|HEAD|POST|PUT)$ )
-    {
-      return 405;
-    }
+  location /.well-known/acme-challenge/ {
+    root /usr/share/nginx/html;
+    allow all;
+  }
+
+  # location ~ /.well-known {
+  #   allow all;
+  # }
+
+  # if ($request_method !~ ^(GET|HEAD|POST|PUT)$ ) {
+  #   return 405;
+  # }
 }
