Replaced nginx and certbot service images for jwilder/nginx-proxy and jrcs/letsencrypt-nginx-proxy-companion

--- a/.env.sample
+++ b/.env.sample
@@ -1,35 +1,36 @@
-GHOST_VERSION=latest
-GHOST_URL=https://replaceme.com
-GHOST_CONTAINER_NAME=REPLACEME-GHOST
-DB_HOST=db
-DB_NAME=REPLACEME
-DB_USER=REPLACEME
-DB_PASSWORD=REPLACEME
-DB_ROOT_PASSWORD=REPLACEME
-SMTP_SERVICE=gmail
-SMTP_USER=REPLACEME
-SMTP_PASSWORD=REPLACEME
-GHOST_DATA=REPLACEME
-GHOST_PORT=REPLACEME
-LOGGING_LEVEL=REPLACEME
-LOGGING_ROTATION_PERIOD=REPLACEME
-
-MYSQL_VERSION=5.7
-MYSQL_CONTAINER_NAME=REPLACEME-MYSQL
-MYSQL_DATA=REPLACEME
-MYSQL_CONFIG=REPLACEME
-MYSQL_PORT=REPLACEME
-
-PMA_CONTAINER_NAME=REPLACEME-PMA
-PMA_PORT=REPLACEME-PMA
-
-NGINX_VERSION=latest
-NGINX_CONTAINER_NAME=REPLACEME-NGINX
 SERVER_NAME="replaceme.com www.replaceme.com"
-NGINX_CONFIG_PATH=./nginx/conf.d
+SSL_SERVER_NAME=replaceme.com
 
-CERTBOT_CONTAINER_NAME=certbot
-# Adding a valid address is strongly recommended
-EMAIL=""
-# Set to 1 if you are testing your setup to avoid hitting request limits
-STAGING=0
+GHOST_VERSION=replaceme
+GHOST_URL=https://replaceme.com
+GHOST_CONTAINER_NAME=replaceme
+GHOST_SMTP_SERVICE=gmail
+GHOST_SMTP_USER=replaceme
+GHOST_SMTP_PASSWORD=replaceme
+GHOST_DATA=replaceme
+GHOST_PORT=replaceme
+GHOST_LOGGING_LEVEL=replaceme
+GHOST_LOGGING_ROTATION_PERIOD=replaceme
+
+MYSQL_VERSION=replaceme
+MYSQL_CONTAINER_NAME=replaceme
+MYSQL_DATA=replaceme
+MYSQL_CONFIG=replaceme
+MYSQL_PORT=replaceme
+MYSQL_ROOT_PASSWORD=replaceme
+MYSQL_HOST=db
+MYSQL_DB_NAME=replaceme
+MYSQL_DB_USER=replaceme
+MYSQL_DB_PASSWORD=replaceme
+
+PMA_VERSION=replaceme
+PMA_CONTAINER_NAME=replaceme
+PMA_PORT=replaceme
+
+NGINX_PROXY_VERSION=replaceme
+NGINX_PROXY_CONTAINER_NAME=replaceme
+NGINX_PROXY_CONFIG_PATH=replaceme
+
+LETSENCRYPT_VERSION=replaceme
+LETSENCRYPT_CONTAINER_NAME=replaceme
+LETSENCRYPT_NOTIFY_EMAIL=replaceme
