--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,18 +11,22 @@ services:
     environment:
       url: ${GHOST_URL}
       database__client: mysql
-      database__connection__host: ${DB_HOST}
-      database__connection__user: ${DB_USER}
-      database__connection__password: ${DB_PASSWORD}
-      database__connection__database: ${DB_NAME}
-      mail__transport: SMTP
-      mail__options__service: ${SMTP_SERVICE}
-      mail__options__auth__user: ${SMTP_USER}
-      mail__options__auth__pass: ${SMTP_PASSWORD}
-      logging__level: ${LOGGING_LEVEL}
-      logging__rotation__period : ${LOGGING_ROTATION_PERIOD}
+      database__connection__host: db
+      database__connection__user: ${MYSQL_DB_USER}
+      database__connection__password: ${MYSQL_DB_PASSWORD}
+      database__connection__database: ${MYSQL_DB_NAME}
+      mail__transport: ${GHOST_SMTP_TRANSPORT}
+      mail__options__service: ${GHOST_SMTP_SERVICE}
+      mail__options__auth__user: ${GHOST_SMTP_USER}
+      mail__options__auth__pass: ${GHOST_SMTP_PASSWORD}
+      logging__level: ${GHOST_LOGGING_LEVEL}
+      logging__rotation__period : ${GHOST_LOGGING_ROTATION_PERIOD}
+      VIRTUAL_PORT: ${GHOST_INTERNAL_PORT} # letsencrypt container requirement
+      VIRTUAL_HOST: ${SERVER_NAMES} # letsencrypt container requirement
+      LETSENCRYPT_HOST: ${SERVER_NAMES} # letsencrypt container requirement
+      LETSENCRYPT_EMAIL: ${LETSENCRYPT_NOTIFY_EMAIL} # letsencrypt container requirement
     ports:
-      - "${GHOST_PORT}:2368"
+      - ${GHOST_PORT}:2368
     volumes:
       - ${GHOST_DATA}:/var/lib/ghost/content
     entrypoint: ["/usr/local/bin/wait-for-it.sh", "mysql", "--", "docker-entrypoint.sh"]
@@ -33,50 +37,47 @@ services:
     restart: always
     container_name: ${MYSQL_CONTAINER_NAME}
     environment:
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USER}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DB_NAME}
+      MYSQL_USER: ${MYSQL_DB_USER}
+      MYSQL_PASSWORD: ${MYSQL_DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
-      - "${MYSQL_PORT}:3306"
+      - ${MYSQL_PORT}:3306
     volumes:
       - ${MYSQL_DATA}:/var/lib/mysql
       - ${MYSQL_CONFIG}:/etc/mysql
 
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin/phpmyadmin:${PMA_VERSION}
     restart: always
     container_name: ${PMA_CONTAINER_NAME}
     depends_on:
       - db
     environment:
       PMA_HOST: db
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
-      - "${PMA_PORT}:80"
+      - ${PMA_PORT}:80
 
-  nginx:
-    image: nginx:${NGINX_VERSION}
+  nginx-proxy:
+    image: jwilder/nginx-proxy:${NGINX_PROXY_VERSION}
     restart: always
-    container_name: ${NGINX_CONTAINER_NAME}
-    depends_on:
-      - ghost
+    container_name: ${NGINX_PROXY_CONTAINER_NAME}
     ports:
-      - "80:80"
-      - "443:443"
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"  
-    environment:
-      SERVER_NAME: ${SERVER_NAME}
+      - 80:80
+      - 443:443
     volumes:
-       - ${NGINX_CONFIG_PATH}/letsencrypt:/etc/letsencrypt
-       - ./www:/var/www/certbot
+      - ${NGINX_PROXY_CONFIG_PATH}:/etc/nginx/vhost.d
+      - ${WWW_ROOT}:/usr/share/nginx/html
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ${NGINX_PROXY_CERTS_PATH}:/etc/nginx/certs
 
-  certbot:
-    image: certbot/certbot
-    container_name: ${CERTBOT_CONTAINER_NAME}
-    restart: unless-stopped
+  letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion:${LETSENCRYPT_VERSION}
+    container_name: ${LETSENCRYPT_CONTAINER_NAME}
+    environment:
+      DEFAULT_EMAIL: ${LETSENCRYPT_NOTIFY_EMAIL}
     volumes:
-      - ${NGINX_CONFIG_PATH}/letsencrypt:/etc/letsencrypt
-      - ./www:/var/www/certbot
-      - ${NGINX_CONFIG_PATH}:/etc/nginx/conf.d
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    volumes_from:
+      - nginx-proxy
