Update env example

--- a/.env.sample
+++ b/.env.sample
@@ -4,11 +4,13 @@ SSL_SERVER_NAME=replaceme.com
 GHOST_VERSION=replaceme
 GHOST_URL=https://replaceme.com
 GHOST_CONTAINER_NAME=replaceme
-GHOST_SMTP_SERVICE=gmail
+GHOST_SMTP_TRANSPORT=replaceme
+GHOST_SMTP_SERVICE=replaceme
 GHOST_SMTP_USER=replaceme
 GHOST_SMTP_PASSWORD=replaceme
 GHOST_DATA=replaceme
 GHOST_PORT=replaceme
+GHOST_INTERNAL_PORT=replaceme
 GHOST_LOGGING_LEVEL=replaceme
 GHOST_LOGGING_ROTATION_PERIOD=replaceme
 
@@ -18,7 +20,6 @@ MYSQL_DATA=replaceme
 MYSQL_CONFIG=replaceme
 MYSQL_PORT=replaceme
 MYSQL_ROOT_PASSWORD=replaceme
-MYSQL_HOST=db
 MYSQL_DB_NAME=replaceme
 MYSQL_DB_USER=replaceme
 MYSQL_DB_PASSWORD=replaceme
@@ -27,9 +28,12 @@ PMA_VERSION=replaceme
 PMA_CONTAINER_NAME=replaceme
 PMA_PORT=replaceme
 
+WWW_ROOT=replaceme
+
 NGINX_PROXY_VERSION=replaceme
 NGINX_PROXY_CONTAINER_NAME=replaceme
 NGINX_PROXY_CONFIG_PATH=replaceme
+NGINX_PROXY_CERTS_PATH=replaceme
 
 LETSENCRYPT_VERSION=replaceme
 LETSENCRYPT_CONTAINER_NAME=replaceme
