Refactored compose file and .env.example to bring database and ghost service behind a simple nginx

--- a/.env.sample
+++ b/.env.sample
@@ -1,40 +1,26 @@
-SERVER_NAME="replaceme.com www.replaceme.com"
-SSL_SERVER_NAME=replaceme.com
-
-GHOST_VERSION=replaceme
-GHOST_URL=https://replaceme.com
-GHOST_CONTAINER_NAME=replaceme
-GHOST_SMTP_TRANSPORT=replaceme
-GHOST_SMTP_SERVICE=replaceme
-GHOST_SMTP_USER=replaceme
-GHOST_SMTP_PASSWORD=replaceme
-GHOST_DATA=replaceme
-GHOST_PORT=replaceme
-GHOST_INTERNAL_PORT=replaceme
-GHOST_LOGGING_LEVEL=replaceme
-GHOST_LOGGING_ROTATION_PERIOD=replaceme
-
-MYSQL_VERSION=replaceme
-MYSQL_CONTAINER_NAME=replaceme
-MYSQL_DATA=replaceme
-MYSQL_CONFIG=replaceme
-MYSQL_PORT=replaceme
-MYSQL_ROOT_PASSWORD=replaceme
-MYSQL_DB_NAME=replaceme
-MYSQL_DB_USER=replaceme
-MYSQL_DB_PASSWORD=replaceme
-
-PMA_VERSION=replaceme
-PMA_CONTAINER_NAME=replaceme
-PMA_PORT=replaceme
-
-WWW_ROOT=replaceme
-
-NGINX_PROXY_VERSION=replaceme
-NGINX_PROXY_CONTAINER_NAME=replaceme
-NGINX_PROXY_CONFIG_PATH=replaceme
-NGINX_PROXY_CERTS_PATH=replaceme
-
-LETSENCRYPT_VERSION=replaceme
-LETSENCRYPT_CONTAINER_NAME=replaceme
-LETSENCRYPT_NOTIFY_EMAIL=replaceme
+SERVER_NAME=relaceme
+LOCAL_HOST=relaceme
+GHOST_VERSION=relaceme
+GHOST_URL=relaceme
+GHOST_SMTP_TRANSPORT=relaceme
+GHOST_SMTP_SERVICE=relaceme
+GHOST_SMTP_USER=relaceme
+GHOST_SMTP_PASSWORD=relaceme
+GHOST_DATA=relaceme
+GHOST_PORT=relaceme
+GHOST_LOGGING_LEVEL=relaceme
+GHOST_LOGGING_ROTATION_PERIOD=relaceme
+DB_IMAGE=relaceme
+DB_VERSION=relaceme
+DB_CONNECTION=relaceme
+DB_DATA=relaceme
+DB_CONFIG=relaceme
+DB_PORT=relaceme
+DB_ROOT_PASSWORD=relaceme
+DB_NAME=relaceme
+DB_USER=relaceme
+DB_PASSWORD=relaceme
+NGINX_VERSION=relaceme
+NGINX_CONFIG_PATH=relaceme
+NGINX_PORT=relaceme
+DB_HOST_PORT=relaceme
